--- a/test.html
+++ b/test.html
@@ -28,13 +28,12 @@
                       <span class="say"> 便胜却人间无数</span><br>
                       <span class="say">一旦喜欢上谁，就别无所求。</span><br>             
                           <span class="say"> 只要每天能见到他，就已经觉得很庆幸了。</span><br>
+                      <span class="say">就已经觉得很庆幸了</span><br>
                       <span class="say">一辈子很短如白驹过隙转瞬即逝，</span><br>
                       <span class="say">可这种心情很长，</span><br>
                       <span class="say">如高山大川，绵延不绝</span><br>
-                      <span class="say">(。•ω•。)ノ♡  </span><br>
-                              <span class="say">     </span><br>
-                           <span class="say">     </span><br>
-                           <span class="say">     </span><br>
+                              <span class="say">(。•ω•。)ノ♡   </span><br>
+                          <!-- <span class="say">     </span><br>-->
                       <span class="say"><span class="space"></span> -- 你的敏敏</span> </font>
                           <br />
                           <br />
@@ -182,7 +181,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    together.setFullYear(2019,1 , 19); 			//时间年月日
+		    together.setFullYear(2019,01 , 19); 			//时间年月日
 		    together.setHours(20);						//小时	
 		    together.setMinutes(53);					//分钟
 		    together.setSeconds(0);					//秒前一位
