--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
                   </div>
                 <div id="clock-box">
                     <span class="STYLE1"></span><font color="#33CC00">敏敏和欣怡在一起</font>
-<span class="STYLE1">已经是第……</span>
+<span class="STYLE1">已经有……</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
