--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">我的欣怡</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">我的欣怡：</span><br>
                       <span class="say"> 金风玉露一相逢，</span><br>
                       <span class="say"> 便胜却人间无数</span><br>
                       <span class="say">一旦喜欢上谁，就别无所求。</span><br>             
