--- a/test.html
+++ b/test.html
@@ -23,12 +23,13 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">我的欣怡：</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">--我的欣怡：</span><br>
+			    <span class="say">     </span><br>
                       <span class="say"> 金风玉露一相逢，</span><br>
                       <span class="say"> 便胜却人间无数</span><br>
                       <span class="say">一旦喜欢上谁，就别无所求。</span><br>             
-                          <span class="say"> 只要每天能见到他，就已经觉得很庆幸了。</span><br>
-                      <span class="say">就已经觉得很庆幸了</span><br>
+                          <span class="say"> 只要每天能见到他，</span><br>
+                      <span class="say">就已经觉得很庆幸了。</span><br>
                       <span class="say">一辈子很短如白驹过隙转瞬即逝，</span><br>
                       <span class="say">可这种心情很长，</span><br>
                       <span class="say">如高山大川，绵延不绝</span><br>
