--- a/test.html
+++ b/test.html
@@ -25,6 +25,7 @@
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">--我的欣怡：</span><br>
 			    <span class="say">     </span><br>
+			    <span class="say"> 点了小心心就是我的人了 </span><br>
                       <span class="say"> 金风玉露一相逢，</span><br>
                       <span class="say"> 便胜却人间无数</span><br>
                       <span class="say">一旦喜欢上谁，就别无所求。</span><br>             
@@ -33,7 +34,7 @@
                       <span class="say">一辈子很短如白驹过隙转瞬即逝，</span><br>
                       <span class="say">可这种心情很长，</span><br>
                       <span class="say">如高山大川，绵延不绝</span><br>
-                              <span class="say">(。•ω•。)ノ♡   </span><br>
+                              <span class="say"> 爱你(。•ω•。)ノ♡   </span><br>
                           <!-- <span class="say">     </span><br>-->
                       <span class="say"><span class="space"></span> -- 你的敏敏</span> </font>
                           <br />
