--- a/test.html
+++ b/test.html
@@ -23,27 +23,27 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">--我的欣怡：</span><br>
+                    <div id="code"> <font color="#FF0000"> <span class="say">--</span><br>
 			    <span class="say">     </span><br>
-			    <span class="say"> 点了小心心就是我的人了 </span><br>
-                      <span class="say"> 金风玉露一相逢，</span><br>
-                      <span class="say"> 便胜却人间无数</span><br>
-                      <span class="say">一旦喜欢上谁，就别无所求。</span><br>             
-                          <span class="say"> 只要每天能见到他，</span><br>
-                      <span class="say">就已经觉得很庆幸了。</span><br>
-                      <span class="say">一辈子很短如白驹过隙转瞬即逝，</span><br>
-                      <span class="say">可这种心情很长，</span><br>
-                      <span class="say">如高山大川，绵延不绝</span><br>
+			    <span class="say"> </span><br>
+                      <span class="say"> </span><br>
+                      <span class="say"> </span><br>
+                      <span class="say"> </span><br>             
+                          <span class="say"> </span><br>
+                      <span class="say"> </span><br>
+                      <span class="say"> </span><br>
+                      <span class="say"> </span><br>
+                      <span class="say"> </span><br>
                               <span class="say"> 爱你(。•ω•。)ノ♡   </span><br>
                           <!-- <span class="say">     </span><br>-->
-                      <span class="say"><span class="space"></span> -- 你的敏敏</span> </font>
+                      <span class="say"><span class="space"></span> </span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">敏敏和欣怡在一起</font>
+                    <span class="STYLE1"></span><font color="#33CC00">和在一起</font>
 <span class="STYLE1">已经有……</span>
                   <div id="clock"></div>
               </div>
