--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">--</span><br>
+                    <div id="code"> <font color="#FF0000"> <!--span class="say"></span><br>
 			    <span class="say">     </span><br>
 			    <span class="say"> </span><br>
                       <span class="say"> </span><br>
@@ -31,10 +31,9 @@
                       <span class="say"> </span><br>             
                           <span class="say"> </span><br>
                       <span class="say"> </span><br>
-                      <span class="say"> </span><br>
-                      <span class="say"> </span><br>
-                      <span class="say"> </span><br>
-                              <span class="say"> 爱你(。•ω•。)ノ♡   </span><br>
+                      <span class="say"> </span><br-->
+                     
+                              <span class="say"> (。•ω•。)ノ♡   </span><br>
                           <!-- <span class="say">     </span><br>-->
                       <span class="say"><span class="space"></span> </span> </font>
                           <br />
