--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">胡敏和韩蕊在一起</font>
+                    <span class="STYLE1"></span><font color="#33CC00">小敏和小蕊在一起</font>
 <span class="STYLE1">已经有……</span>
                   <div id="clock"></div>
               </div>
